--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,11 @@
  width: 960px;
  margin: auto;
  display: grid;
- grid-template-columns: 1fr 1fr 1fr;
+ grid-template-columns: 1fr;
 }
 
-
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  border: 1px solid black;
+}
