--- a/src/CategoriesList.css
+++ b/src/CategoriesList.css
@@ -6,12 +6,13 @@
 
 .CategoriesList *{
   width: auto;
-  margin: 2px 4px;
+  margin: 4px 4px;
   padding: 2px 4px;
   background-color: #1a8;
   font-size: 18px;
 }
 
 .selected{
-  border: 5px solid #2da
+  border: 4px solid #a34;
+  margin: 0px;
 }
